# Datathon

./: .Dockerfile  .gitignore  Dockerfile  Nbk_Datathon_Final.ipynb  README.md  app.py  attribute_creation.py  data_processor.py  docker-compose.yaml  docker-compose.yml  main.py  model_trainer_logged.py  model_trainer_nonlogged.py  pyproject.toml  user_features_unified.py
EDA/: attribute_creation.py
Feature_Engineering/: data_manipulation.py  feature_engineering.py
Scripts/: functions_to_help.py
app/: app.py  recommender.py
app/controllers/: logged_controller.py  nonlogged_controller.py
app/models/: recommendation.py
app/routers/: logged_router.py  nonlogged_router.py
datathon/: app.py
datathon/controllers/: predict_controller.py
datathon/routers/: apis.py
training/: train_model.py
