[tool.poetry]
name = "datathon v2"
version = "0.1.0"
description = "Datathon"
authors = ["MLET-007"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10"
pandas = "^1.5"
numpy = "^1.23"
scikit-learn = "^1.1"
scipy = "^1.10"
torch = "^1.13.1"
transformers = "^4.28.0"
redis = "^4.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = "^23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"