[tool.poetry]
name = "datathon_recommendation"
version = "0.1.0"
description = "Projeto de recomendação content-based com fallback (Datathon)."
authors = ["Seu Nome <seuemail@example.com>"]

# Não colocar python aqui, e sim em [tool.poetry.dependencies]
readme = "README.md"
package-mode = false  # Desabilita instalação do projeto como pacote (opcional)

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.2"
uvicorn = "^0.22"
gunicorn = "^20.1"
pyarrow = "^12.0"  

[poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
