[tool.poetry]
name = "datathon"
version = "0.1.0"
description = ""
authors = ["email dos alunos - MLE"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
numpy = "^1.24"
nltk = "^3.8"
scikit-learn = "^1.3"
scipy = "^1.10"
fastapi = "^0.95"
uvicorn = "^0.20"
joblib = "^1.2"
pyarrow = "^19.0.1"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
taskipy = "^1.12.2"
blue = "^0.9.1"
httpx = "^0.27.0"

[tool.isort]
profile = "black"
line_length = 79
extend_skip = ['migrations']

[tool.pytest.ini_options]
pythonpath = "."

[tool.blue]
extend-exclude = '(migrations/)'

[tool.taskipy.tasks]
format = 'blue .  && isort .'
run = 'uvicorn embrapa.app:app --reload'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
